// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Icon Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 16px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 16px 24px;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders Large Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 16px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 16px 24px;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders Medium Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 12px 16px;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders Small Button 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-1::before:disabled {
  cursor: not-allowed;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders when there is an icon with a colour 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-2 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-2:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-2:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-2:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-2::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-2::before:disabled {
  cursor: not-allowed;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<button
    class="emotion-2"
    type="button"
  >
    <div
      class="emotion-1"
      wrap="nowrap"
    >
      <div
        class="emotion-0"
        wrap="nowrap"
      >
        click this!
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders when there is an icon with the placement set to end 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-2 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-2:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-2:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-2:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-2::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-2::before:disabled {
  cursor: not-allowed;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<button
    class="emotion-2"
    type="button"
  >
    <div
      class="emotion-1"
      wrap="nowrap"
    >
      <div
        class="emotion-0"
        wrap="nowrap"
      >
        click this!
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders when there is an icon with the placement set to start 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-2 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-2:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-2:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-2:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-2::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-2::before:disabled {
  cursor: not-allowed;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<button
    class="emotion-2"
    type="button"
  >
    <div
      class="emotion-1"
      wrap="nowrap"
    >
      <div
        class="emotion-0"
        wrap="nowrap"
      >
        click this!
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders when there is no icon 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-2 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-2:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-2:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-2:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-2::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-2::before:disabled {
  cursor: not-allowed;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<button
    class="emotion-2"
    type="button"
  >
    <div
      class="emotion-1"
      wrap="nowrap"
    >
      <div
        class="emotion-0"
        wrap="nowrap"
      >
        click this!
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button renders with different style preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  border-style: solid;
  border-color: #d5ebff;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-1:active:not(:disabled) {
  background-color: #e6f4ff;
  border-width: #0A68C1;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-1::before:disabled {
  cursor: not-allowed;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </button>
</DocumentFragment>
`;

exports[`Button renders with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 12px;
  margin: 8px 0;
}

.emotion-1 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-1::before:disabled {
  cursor: not-allowed;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<button
    class="emotion-1"
    type="button"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </button>
</DocumentFragment>
`;
